# sinsandvirtues

./: .gitignore  README.md  detailed-example.csv  google_sheets_template.xlsx  pyproject.toml  sinsandvirtues.ai  sinsandvirtues.py
